crates/specline-mcp/tests/snapshots/snapshots__specline_next.snap
---
source: crates/specline-mcp/tests/snapshots.rs
expression: result
---
{
  "content": [
    {
      "text": "1 ready, best first:\n- **HARB-1** Dedupe usage events by idempotency key — in no phase · today\n\nClaim the one you pick with `specline_claim`.",
      "type": "text"
    }
  ],
  "isError": false,
  "structuredContent": {
    "ready": [
      {
        "group": "rest",
        "id": "[id]",
        "priority": "p2",
        "reference": "HARB-1",
        "title": "Dedupe usage events by idempotency key",
        "unblocks": 0,
        "why": "in no phase · today"
      }
    ],
    "total": 1,
    "truncated": false
  }
}
