crates/specline-mcp/tests/snapshots/snapshots__specline_projects.snap
---
source: crates/specline-mcp/tests/snapshots.rs
expression: result
---
{
  "content": [
    {
      "text": "1 project(s):\n  Harbour (harbour) — active",
      "type": "text"
    }
  ],
  "isError": false,
  "structuredContent": {
    "projects": [
      {
        "aliases": [],
        "audit": {
          "archived_at": null,
          "created_at": "[timestamp]",
          "created_by": "claude",
          "session_id": "ses_snapshot",
          "surface": null,
          "updated_at": "[timestamp]",
          "updated_by": "claude",
          "version": 1
        },
        "decisions_path": null,
        "description": null,
        "id": "[id]",
        "idempotency_key": "[hash]",
        "key": "HARB",
        "milestone_noun": null,
        "name": "Harbour",
        "repo_urls": [],
        "root_path": null,
        "slug": "harbour",
        "status": "active",
        "status_path": null
      }
    ]
  }
}
