crates/specline-mcp/tests/snapshots/snapshots__specline_write_doc.snap
---
source: crates/specline-mcp/tests/snapshots.rs
expression: result
---
{
  "content": [
    {
      "text": "Wrote revision 1 of “Usage metering” (38 bytes).",
      "type": "text"
    }
  ],
  "isError": false,
  "structuredContent": {
    "created_revision": true,
    "document": {
      "author": "claude",
      "body": "## Metering\n\nUsage is counted hourly.\n",
      "body_hash": "[hash][hash]",
      "created_at": "[timestamp]",
      "doc_id": "[id]",
      "embedding": null,
      "embedding_model": "bge-small-en-v1.5",
      "embedding_version": 1,
      "entity_id": "[id]",
      "entity_type": "spec",
      "media_ref": null,
      "parent_version": null,
      "project_id": "[id]",
      "session_id": "ses_snapshot",
      "status": "current",
      "surface": null,
      "title": "Usage metering",
      "version": 1
    },
    "style_warnings": []
  }
}
